[workspace]
members = [
    "proto/gen/rust",
    "rust/cli",
    "rust/core",
    "rust/dbt-converter",
    "rust/pbjson-types",
    "rust/wasm-binding"
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80.0"

[workspace.dependencies]
sqlinference = { git = "https://github.com/quarylabs/sqruff.git", package = "sqruff-sqlinference" }
sqruff-lib-core = { git = "https://github.com/quarylabs/sqruff.git", package = "sqruff-lib-core" }
sqruff-lib-dialects = { git = "https://github.com/quarylabs/sqruff.git", package = "sqruff-lib-dialects" }

[workspace.dev-dependencies]
cargo-nextest = "0.9"

