[workspace]
members = [
    "proto/gen/rust",
    "rust/cli",
    "rust/core",
    "rust/dbt-converter",
    "rust/pbjson-types",
    "rust/wasm-binding"
]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86.0"

[workspace.dependencies]
sqlinference = { package = "sqruff-sqlinference", version = "0.30" }
sqruff-lib-core = { package = "sqruff-lib-core", version = "0.30" }
sqruff-lib-dialects = { package = "sqruff-lib-dialects", version = "0.34" }

[workspace.dev-dependencies]
cargo-nextest = "0.9"

