[package]
name = "quary"
version = "0.0.106"
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = { version = "8", default-features = false }
clap = { version = "4", features = ["derive"] }
quary-core = { path = "../core" }
dbt-converter = { path = "../dbt-converter" }
quary_proto = { path = "../../proto/gen/rust" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
async-trait = "0.1"
indicatif = "0.17"
gcp-bigquery-client = "0.18"
prost = "0.12"
google-cloud-auth = { version = "0.13", default-features = false, features = ["external-account", "rustls-tls"] }
snowflake-api = { path = "../snowflake-api" }
arrow-array = "50"
duckdb = { version = "0.10", features = ["bundled"] }
regex = "1.10.3"
futures = "0.3.30"
base64 = "0.22.0"
dotenv = "0.15"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.4", features = ["postgres", "minio"] }
