[package]
name = "quary"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
quary-core = { path = "../core" }
quary-databases = { path = "../quary-databases" }
dbt-converter = { path = "../dbt-converter" }
quary_proto = { path = "../../proto/gen/rust" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
indicatif = "0.17"
prost = "0.12.4"
futures = "0.3.30"
base64 = "0.22.1"
dotenv = "0.15"
serde_yaml = "0.9.33"

[dev-dependencies]
chrono = "0.4.38"
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["postgres"] }
