[package]
name = "quary"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
quary-core = { path = "../core" }
quary-databases = { path = "../quary-databases" }
dbt-converter = { path = "../dbt-converter" }
quary_proto = { path = "../../proto/gen/rust" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
indicatif = "0.17"
prost = "0.13.5"
futures = "0.3.31"
base64 = "0.22.1"
dotenv = "0.15"
serde_yaml = "0.9.33"
duckdb = { version = "1.0.0", features = ["bundled"] }
sqlinference.workspace = true
sqruff-lib-core.workspace = true
sqruff-lib-dialects.workspace = true

[dev-dependencies]
chrono = "0.4.38"
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.22.0"
testcontainers-modules = { version= "0.10.0", features = ["postgres", "clickhouse"]}

[build-dependencies]
regex = "1.11.1"
