[package]
name = "quary-core"
version = "0.2.0"
authors = ["Ben King <9087625+benfdking@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.78.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = { default-features = false, version = "0.12" }
sqlparser = { default-features = false, version = "0.45" }
quary_proto = { path = "../../proto/gen/rust" }
sqlinference = { path = "../sqlinference" }
rust-embed = "8"
csv = "1"
petgraph = { version = "0.6", default-features = false }
regex = { version = "1", default-features = false, features = ["unicode-perl"] }
once_cell = "1"
async-trait = "0.1.80"
chrono = "0.4.38"
serde_yaml = "0.9.33"
futures = { version = "0.3", features = ["async-await", "std"], default-features = false }
sha2 = { default-features = false, version = "0.10.8" }
data-encoding = "2.6.0"
pbjson-types = { version = "0.6.0", path = "../pbjson-types" }
mockall = "0.12.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros"], default-features = false }
