[package]
name = "quary-core"
authors = ["Ben King <9087625+benfdking@users.noreply.github.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quary_proto = { path = "../../proto/gen/rust" }
sqlinference.workspace = true
sqruff-lib-core.workspace = true
sqruff-lib-dialects.workspace = true

prost = { default-features = false, version = "0.14" }
rust-embed = "8"
csv = "1"
petgraph = { version = "0.6", default-features = false }
regex = { version = "1", default-features = false, features = ["unicode-perl"] }
async-trait = "0.1.80"
chrono = "0.4.38"
serde_yaml = "0.9.33"
futures = { version = "0.3", features = ["async-await", "std"], default-features = false }
sha2 = { default-features = false, version = "0.10.8" }
data-encoding = "2.6.0"
pbjson-types = { version = "0.7.0", path = "../pbjson-types" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros"], default-features = false }
mockall = "0.14.0"
