[package]
name = "dbt-converter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
regex = { version = "1" }
walkdir = "2"
tempfile = "3"
quary_proto = { path = "../../proto/gen/rust" }

[lib]
