[package]
name = "pbjson-types"
version = "0.7.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Protobuf well known types with serde serialization support"
edition = "2021"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"
exclude = ["protos/*"]

[dependencies] # In alphabetical order
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
pbjson = { version = "0.9" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[build-dependencies] # In alphabetical order
prost-build = "0.14"
pbjson-build = { version = "0.9.0" }
