[package]
name = "quary-databases"
version = "0.1.9"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quary-core = { path = "../core" }
quary_proto = { path = "../../proto/gen/rust" }

yup-oauth2 = { version = "8", default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "bigdecimal"] }
async-trait = "0.1.80"
gcp-bigquery-client = "0.18.0"
google-cloud-auth = { version = "0.14.0", default-features = false, features = ["external-account", "rustls-tls"] }
prost = "0.12.4"
regex = "1.10.4"
chrono = "0.4.38"

duckdb = { version = "0.10.2", features = ["bundled"] }
snowflake-api = "0.8.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["postgres"] }
