[package]
name = "quary-databases"
version = "0.3.2"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quary-core = { path = "../core" }
quary_proto = { path = "../../proto/gen/rust" }

yup-oauth2 = { version = "9", default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "bigdecimal"] }
async-trait = "0.1.80"
gcp-bigquery-client = "0.20.0"
google-cloud-auth = { version = "0.15.0", default-features = false, features = ["external-account", "rustls-tls"] }
prost = "0.12.4"
regex = "1.10.4"
chrono = "0.4.38"
duckdb = { version = "0.10.2", features = ["bundled"] }
snowflake-api = "0.8.0"
clickhouse-rs = "1.1.0-alpha.1"
futures-util = "0.3.30"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.20.1"
# TODO make this depend on latest version when clickhouse is published
testcontainers-modules = { version= "0.8.0", features = ["postgres", "clickhouse"]}
