[package]
name = "quary-databases"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quary-core = { path = "../core" }
quary_proto = { path = "../../proto/gen/rust" }
sqruff-lib-core.workspace = true
sqruff-lib-dialects.workspace = true

arrow-flight = { version = "55" , default-features = true, features = ["flight-sql-experimental"] }
yup-oauth2 = { version = "9", default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "bigdecimal"] }
async-trait = "0.1.80"
gcp-bigquery-client = "0.20.0"
google-cloud-auth = { version = "0.15.0", default-features = false, features = ["external-account", "rustls-tls"] }
prost = "0.14"
regex = "1.10.4"
chrono = "0.4.38"
duckdb = { version = "1.3.2", features = ["bundled"] }
snowflake-api = "0.12.0"
clickhouse = "0.13.3"
futures-util = "0.3.30"
tonic = "0.14.0"
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
testcontainers = "0.24"
testcontainers-modules = { version= "0.12", features = ["postgres", "clickhouse"]}
